completes safari wait message

--- a/wait-message.html
+++ b/wait-message.html
@@ -195,6 +195,13 @@
     <button id="cancel-btn" class="continue" hidden>Cancel</button>
   </div>
 
+  <div id="alert-box" class="alert-box" tabindex="0" hidden>
+    <div id="animation-container"></div>
+    <div id="visual-text" aria-hidden="true"></div>
+    <div id="live-region" class="visually-hidden"></div>
+    <button id="cancel-btn" class="continue" hidden>Cancel</button>
+  </div>
+
   <div id="alert-ok" class="alert-box" role="alertdialog" tabindex="0" hidden>
     <div>Action complete!</div>
     <button id="ok-btn" class="continue">OK</button>
