initializes js and fixes html

--- a/tooltip/index.html
+++ b/tooltip/index.html
@@ -12,6 +12,6 @@
     <button aria-describedby="nxt-pg-tltp">Next Page</button>
   </div>
   </main>
-  <script type="text/javascript" src="./index.js"></script>>
+  <script type="text/javascript" src="./index.js"></script>
 </body>
 </html>
