figures out how to dismiss tooltip with esc on focus and on mouse

--- a/tooltip/index.html
+++ b/tooltip/index.html
@@ -9,7 +9,7 @@
   <h1>Accessible Tooltip Button Example</h1>
   <div class="tltp-container">
     <button aria-describedby="nxt-pg-tltp">Next Page</button>
-    <span role="tooltip">Continue to next page</span>
+    <span role="tooltip" aria-hidden="true">Continue to next page</span>
   </div>
   </main>
   <script type="text/javascript" src="index.js"></script>
